k8s-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depa-backend-deployment-final
  annotations:
    kubernetes.io/change-cause: "[ADD] Final Deploy"
  labels:
    app: depa-backend
    version: final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depa-backend
      version: final
  template:
    metadata:
      labels:
        app: depa-backend
        version: final
    spec:
      containers:
      - name: depa-backend
        image: linxianer12/oots:v1.0.2
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
        resources:
          limits:
            memory: "756Mi"
            cpu: "300m"
        ports:
          - containerPort: 8080
