k8s-deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depa-backend-deployment-final
  annotations:
    kubernetes.io/change-cause: "ENV_CHANGE_CAUSE_MESSAGE"
  labels:
    app: depa-backend
    version: LABEL_VERSION
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depa-backend
      version: LABEL_VERSION
  template:
    metadata:
      labels:
        app: depa-backend
        version: LABEL_VERSION
    spec:
      containers:
        - name: depa-backend
          image: linxianer12/open-online-testing-api:IMAGE_BUILD_ID
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 8080
