k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depa-backend-deployment
  annotations:
    kubernetes.io/change-cause: "ENV_CHANGE_CAUSE_MESSAGE"
  labels:
    app: depa-backend
    version: LABEL_VERSION
spec:
  replicas: 3
  selector:
    matchLabels:
      app: depa-backend
      version: LABEL_VERSION
  template:
    metadata:
      labels:
        app: depa-backend
        version: LABEL_VERSION
    spec:
      imagePullSecrets:
       - name: ntt-azure-registry
      containers:
      - name: depa-backend
        image: AZ_CONTAINER_REGISTRY_URL/dev/depa-backend:IMAGE_BUILD_ID
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
          - containerPort: 8080
