k8s-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   service.beta.kubernetes.io/azure-load-balancer-resource-group: "Elasticsearch-Stack"
  #   service.beta.kubernetes.io/azure-dns-label-name: api
  name: spring-random-pod-service
  labels:
    app: spring-random-pod
    version: dev
spec:
  # loadBalancerIP: 20.44.211.173
  type: ClusterIP
  selector:
    app: spring-random-pod
    version: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
