k8s-service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: depa-backend-service
  labels:
    app: depa-backend
    # version: dev
spec:
  type: ClusterIP
  selector:
    app: depa-backend
    # version: dev
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
