k8s-fina-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: depa-backend-service
  namespace: default
spec:
  host: depa-backend-service.default.svc.cluster.local
  subsets:
    - labels:
        version: edgy
      name: edgy
    - labels:
        version: production
      name: production
