k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-random-pod-ingress  
  annotations:
    # kubernetes.io/ingress.class: istio
    # kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://lnwza.com"
    
spec:
  tls:
  - hosts:
    - api.devopsculture.tk
    - api.production.devopsculture.tk
    secretName: tls-secret
  rules:
  - host: api.devopsculture.tk
    http:
      paths:
      - backend:
          serviceName: spring-random-pod-service
          servicePort: 80
        path: /

  - host: api.production.devopsculture.tk
    http:
      paths:
      - backend:
          serviceName: spring-random-pod-service-production
          servicePort: 80
        path: /
